kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gbdx-deployment
  labels:
    app: gbdx
spec:
  selector:
    matchLabels:
      app: gbdx
  template:
    metadata:
      labels:
        app: gbdx
    spec:
      containers:
      - name: gbdx
        image: gbdx_catalog_search
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
