kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  name: gbdx-service
spec:
  selector:
    app: gbdx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
